@@ -19,6 +19,7 @@ Bug IDs that start with "K" can be found in the Kenai Bugzilla
 The following bugs have been fixed in the 1.4.4 release.
 
 6905730	MimeMessage.parse() is very slow on malformed message content
+6910675	IMAP provider can lose track of message sequence numbers
 G 11069	update the mail.jar manifest to include DynamicImport-Package
 <no id>	add mail.mime.windowsfilenames System property to handle IE6 breakage
 <no id>	properly disable TOP if POP3 CAPA response doesn't include it
